# CatLearn

./: .gitignore  README.md  pyproject.toml
catlearn/: mpi_helper.py
catlearn/activelearning/: activelearning.py  mlneb.py
catlearn/regression/gp/optimizers/: globaloptimizer.py  linesearcher.py  optimizer.py
catlearn/scripts/: adjust_constrains.py  extra_worker_unified.py  mlneb_shell_lib.sh  mlneb_state.py  mlneb_workflow_unified.py  run_local_mace.py  run_mlneb_core.sh  worker_constraint_guard_snippet.py
catlearn/scripts/calcfunctions/: __init__.py  base.py  macecalc.py  vaspcalc.py
skripts/: extra_worker_unified.py  mlneb_workflow_unified.py  run_mlneb_core.sh
