[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catlearn"
version = "0.1.0"
description = "CatLearn with external MLNEB workflow support"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "dill",
    "mpi4py>=3.0.3",
    "ase<3.27",
    "numpy>=1.20.3",
    "scipy>=1.8.0",
    "matplotlib>=3.8"
]

authors = [
  {name = "Andreas Vishart", email = "alyvi@dtu.dk"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

keywords = [
    "machine-learning",
    "gaussian-process",
    "regression"]

[tool.setuptools.packages.find]
where = ["."]
include = ["catlearn*"]

[tool.setuptools]
script-files = ["catlearn/scripts/run_mlneb_core.sh"]

[project.scripts]
mlneb-workflow     = "catlearn.scripts.mlneb_workflow_unified:main"
mlneb-extra-worker = "catlearn.scripts.extra_worker_unified:main"
